--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -13,6 +13,9 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.13.x
+      - 
+        name: Install tools
+        run: go install golang.org/x/lint/golint
       -
         name: golint
         run: golint -set_exit_status ./...
