--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -13,12 +13,12 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.13.x
-      - 
-        name: Install tools
-        run: go install golang.org/x/lint/golint
       -
         name: golint
-        run: golint -set_exit_status ./...
+        run: |
+          export PATH=$PATH:$(go env GOPATH)/bin
+          go get -u golang.org/x/lint/golint
+          golint -set_exit_status ./...
       -
         name: go vet
         run: go vet ./...
