--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -15,7 +15,10 @@ jobs:
           go-version: 1.13.x
       -
         name: golint
-        run: golint -set_exit_status ./...
+        run: |
+          export PATH=$PATH:$(go env GOPATH)/bin
+          go get -u golang.org/x/lint/golint
+          golint -set_exit_status ./...
       -
         name: go vet
         run: go vet ./...
